# ComboEngine

./: .gitignore  .gitmodules  C++CodingStyleGuide.txt  CMakeCache.txt  CMakeLists.txt  GenerateLinuxProjects.sh  README.md  Readme_instructions  Useful_links.txt  premake5.lua
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  Findlodepng.cmake
docs/: README.md
libs/: CMakeLists.txt  README.md
libs/glad/: premake5.lua
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: stb_image.cpp  stb_image_resize.cpp  stb_image_write.cpp  stb_image_write.h
resources/: README.md
src/: Attributes.h  GLSL_handler.h  README.md  SDLWindow.cpp  SDLWindow.h  SDL_handler.cpp  SDL_handler.h  graphics_engine.h  imgui.ini  imgui_impl_opengl3.h  main.cpp
src/Application/: Application.cpp  imgui.ini
src/Application/assets/shaders/: GridShader.glsl  Texture.glsl
src/Application/src/: Application.cpp  ApplicationLayer.cpp  ApplicationLayer.h
src/Combo/: CMakeLists.txt  CameraManager.h  Combo.h  Engine.cpp  Engine.h  EngineCore.h  EntryPoint.h  FrameBuffer.cpp  FrameBuffer.h  GLFWInputManager.cpp  GLFWInputManager.h  GLFWWindow.cpp  GLFWWindow.h  InputCodes.h  InputManagerGLFW.cpp  InputManagerGLFW.h  Layer.cpp  Layer.h  LayerStack.cpp  LogManager.cpp  LogManager.h  SDLInputManager.h  SDLManager.cpp  SDLWindow.cpp  SDLWindow.h  Timestep.h  WindowBase.h  WindowGLFW.cpp  WindowGLFW.h  combopch.h  imgui_impl_opengl3.cpp  main_tmp.cpp
src/Combo/Core/: Engine.cpp  Engine.h  EngineCore.cpp  EntryPoint.h  InputManagerGLFW.cpp  InputManagerGLFW.h  Layer.cpp  LayerStack.cpp  LayerStack.h  LogManager.cpp  OrthographicCameraControl.cpp  OrthographicCameraControl.h  WindowBase.h  WindowGLFW.cpp  WindowGLFW.h
src/Combo/Core/InputManager/: Event.h  EventManager.h  InputManager.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Combo/InputManager/: Event.h  EventDispatcher.h  EventManager.h  EventQueue.h  InputManager.cpp  InputManager.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Combo/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Combo/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  RenderManager.cpp  RenderManager.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Combo/UI/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Combo/not_used/: EngineCoreDynamic.h  FileManager.h  RenderManager.h  SDLInputManager.cpp  SDLInputManager.h  SDLWindow.cpp  SDLWindow.h
tmp/cmake/: FindGLM.cmake  FindSDL2_ttf.cmake
tools/: README.md
